--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/ClassifiedPrint.Uploader/wwwroot/uploads/VVQ3.xml
+/ClassifiedPrint.Uploader/wwwroot/uploads/VVQ2.xml
+/ClassifiedPrint.Uploader/wwwroot/uploads/HCM_3806_14122018.pdf
+/ClassifiedPrint.Uploader/wwwroot/uploads/HCM_3749_18102018.pdf
